[package]
name = "r6r6"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
hdrhistogram = "7.5.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
